--- a/src/components/AllCharacter/AllCharacter.css
+++ b/src/components/AllCharacter/AllCharacter.css
@@ -1,6 +1,7 @@
 .all-character {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     padding: 20px;
-    margin: 10px;
+    /* margin: 10px; */
 }
