--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,25 @@
 .header {
     color:#e62429;
     font-size: 20px;
-    background-color:#202020;
+    background-color: #151515;
     padding-bottom:2px;
+    margin-bottom: 20px;
     font-family: Roboto,Trebuchet MS,Helvetica,Arial,sans-serif;
+}
+
+h1 {
+    background-color:#202020!important;
+    padding:10px;
 }
 
 .home-page-link {
     font-size: 12px;
-    color: #e62429;
+    color: #ffffff;
     text-decoration: none;
     padding-bottom: 2px;
 }
 
 .home-page-link:hover {
     font-size: 13px;
-    color: #ffffff;
+    color: #e62429;
 }
