--- a/src/components/CharacterCard/CharacterCard.css
+++ b/src/components/CharacterCard/CharacterCard.css
@@ -1,8 +1,8 @@
 .character-card {
     display: flex;
     justify-content: center;
-    max-width: 230px; 
-    padding:5px;
+    max-width: 150px; 
+    padding: 5px;
 }
 
 .card-container {
@@ -18,7 +18,7 @@
 }
 .card-container:hover {
     background-color: #e62429;
-    transform: scaleX(1);
+    transform: scaleX(1.02);
     transition: all .3s linear;
     -webkit-transform: scaleX(1);
     transform: scaleY(1.02);
@@ -36,8 +36,11 @@
 }
 
 .card-img:hover {
-    -webkit-transition: all .2s linear;
-    transition: all .2s linear;
+    transform: scaleX(1.05);
+    transition: all .3s linear;
+    -webkit-transform: scaleX(1.1);
+    /* transform: scaleY(1); */
+    /* -webkit-transition: all .2s linear; */
     overflow: hidden;
     -o-object-position: top center;
     object-position: top center;
