--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,19 +7,25 @@
     font-family: Roboto,Trebuchet MS,Helvetica,Arial,sans-serif;
 }
 
-h1 {
+.logo-img-container {
     background-color:#202020!important;
     padding:10px;
+}
+
+.marvel-logo {
+    width: 15%;
 }
 
 .home-page-link {
     font-size: 12px;
     color: #ffffff;
     text-decoration: none;
-    padding-bottom: 2px;
+    padding-bottom: 5px;
+    
 }
 
 .home-page-link:hover {
-    font-size: 13px;
+    font-size: 14px;
     color: #e62429;
+    border-bottom: 1px solid #e62429;
 }
