--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,36 +3,25 @@
   font-family: Roboto,Trebuchet MS,Helvetica,Arial,sans-serif;
 }
 
-.p {
+/* .p {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .p {
     animation: p-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
-  /* background-color: #ffffff; */
-  /* min-height: 100vh; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
 .App-link {
   color: #61dafb;
 }
-
-p {
-  color: red;
-}
-
+/* 
 @keyframes p-spin {
   from {
     transform: rotate(0deg);
@@ -40,4 +29,4 @@ p {
   to {
     transform: rotate(180deg);
   }
-}
+} */
