--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,9 +2,9 @@
     color:#e62429;
     font-size: 20px;
     background-color: #151515;
-    padding-bottom:2px;
-    margin-bottom: 20px;
+    padding-bottom: 5px;
     font-family: Roboto,Trebuchet MS,Helvetica,Arial,sans-serif;
+    text-align: center;
 }
 
 .logo-img-container {
@@ -13,7 +13,9 @@
 }
 
 .marvel-logo {
-    width: 15%;
+    width: 10%;
+    align-items: center;
+    height: fit-content;
 }
 
 .home-page-link {
@@ -26,5 +28,5 @@
 
 .home-page-link:hover {
     font-size: 13px;
-    border-bottom: 2px solid #e62429;
+    border-bottom: 2px solid #fbf8f8;
 }
