--- a/src/components/AllCharacter/AllCharacter.css
+++ b/src/components/AllCharacter/AllCharacter.css
@@ -1,9 +1,10 @@
 .all-character {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
     padding: 20px;
-    margin: 10px;
+    margin: 10px 5% 10% 10%;
+    /* margin: 10px; */
     overflow-x: hidden;
     height: 65vh;
 }
