Add Style to Search bar

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -10,9 +10,34 @@
     opacity: 0.4;
 }
 
+.search-bar-container {
+    display: flex;
+    margin-left: 12%;
+    margin-top: 5%;
+}
+
+.icon-search {
+    width: 8%;
+    fill: none;
+    stroke-width: 2px;
+    stroke-linecap: square;
+    border-bottom: 2px solid #151515;
+}
+
 .search-bar {
     align-items: center;
     text-align: initial;
     width: 300px;
-    margin: 5% 0 0 12%;
+    letter-spacing: 1px;
+    outline-color: #9e9e9e36;
+    border: 0;
+    border-bottom: 2px solid #151515;
+    font: 400 26px/1 RobotoCondensed,Trebuchet MS,Helvetica,Arial,sans-serif;
+}
+
+.gray-line {
+    background-color: #f2f2f2;
+    height: 2px;
+    margin-left: 12%;
+    margin-right: 18%;
 }
