--- a/src/components/CharacterDetail/CharacterDetail.css
+++ b/src/components/CharacterDetail/CharacterDetail.css
@@ -1,8 +1,8 @@
 .character-detail {
-    background-color:#white;
+    background-color:  white;
     color: black;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     padding: 5%;
     padding-left:0;
 }
@@ -16,7 +16,7 @@
     width: 40%;
     border-radius: 0 60px;
     margin-left: 10%;
-    /* border:2px solid #ff0000ab; */
+    border:2px solid #ff0000ab;
 }
 
 .text-info {
@@ -25,4 +25,12 @@
 
 .character-name {
     color: #ff0000ab;
+}
+
+.comic-img {
+    width:20%;
+    margin: 10%;
+    border-radius: 0 40px;
+    border:2px solid #ff0000ab;
+
 }
