Delete Unnecessary lines and comments on the code

--- a/src/components/CharacterDetail/CharacterDetail.css
+++ b/src/components/CharacterDetail/CharacterDetail.css
@@ -27,10 +27,9 @@
     color: #ff0000ab;
 }
 
-.comic-img {
+.series-img {
     width:20%;
     margin: 10%;
     border-radius: 0 40px;
     border:2px solid #ff0000ab;
-
 }
