--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@
 
 .logo-img-container {
     background-color:#202020!important;
-    padding:10px;
+    padding-top:10px;
 }
 
 .marvel-logo {
@@ -22,8 +22,7 @@
     font-size: 12px;
     color: #ffffff;
     text-decoration: none;
-    padding-bottom: 5px;
-    
+    padding-bottom: 5px;   
 }
 
 .home-page-link:hover {
