--- a/src/components/Series/Series.css
+++ b/src/components/Series/Series.css
@@ -1,3 +1,12 @@
 .series-list {
-    padding-left: 8%;
+    text-align: center;
+    font-size: 120%;
+}
+
+/* ****** IphoneX ******* */
+@media only screen and (max-width:600px ){
+    .series-list {   
+      font-size: 100%;
+    }
+    
 }
