Delete Unescessary code

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     padding-bottom: 5px;
     font-family: Roboto,Trebuchet MS,Helvetica,Arial,sans-serif;
     text-align: center;
+    height: fit-content;
 }
 
 .logo-img-container {
@@ -13,7 +14,7 @@
 }
 
 .marvel-logo {
-    width: 10%;
+    width: 100px;
     align-items: center;
     height: fit-content;
 }
