--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -32,6 +32,7 @@
     letter-spacing: 1px;
     outline-color: #9e9e9e36;
     border: 0;
+    margin-bottom: 0;
     border-bottom: 2px solid #151515;
     font: 400 26px/1 RobotoCondensed,Trebuchet MS,Helvetica,Arial,sans-serif;
 }
